Fix accessibility warning for button missing screen-readable text

--- a/src/components/hamburger/Hamburger.scss
+++ b/src/components/hamburger/Hamburger.scss
@@ -28,6 +28,13 @@
       background: #{color("primary")};
       border-radius: 5px;
     }
+
+    .hidden-label {
+      position: absolute;
+      height: 1px;
+      width: 1px;
+      overflow: hidden;
+    }
   }
 
   .link {
